ViTables ChangeLog
==================
** Nov 30, 2008**
	Fixed a bug in the navigation of huge datasets. Now displayed data is properly
	updated when a slider drag ends and when the table is wheeled.

** Nov 13, 2008 **
	Navigation of huge datasets is now fully implemented. Every navigation
	device (vertical scrollbar, keyboard and mouse wheel) seems to work fine and
	to update displayed data when a buffer fault occurs.

** Nov 04, 2008 **
	Navigability of huge datasets has been enhanced. The selected cell is now
	properly updated when a buffer fault occurs. It means that navigating the
	table with the keyboard works fine now.

** Oct 31, 2008 **
	Huge datasets can be displayed and navigated. Several things remain to be
	done (usability enhancements) but the feature seems usable and stable.

** Oct 24, 2008 **
	Opening files by dropping their icons in the databases tree panel is fully
	implemented.

	Some annoying problems that arised when nodes were moved around in the
	databases tree panel have been fixed.

	I've started to implement the support for huge datasets.

** Oct 23, 2008 **
	Opening files by dropping their icons in the databases tree panel has been
	partially implemented.

	Fixed a couple of bugs in the Properties dialog: data types are correctly
	shown now.

	In-place renaming of nodes has been debugged.

	Fixed a little problem with groups expansion in the tree view pane that was
	rather annoying: now pasting a node (or creating a new group) expands the
	parent group if it was closed. So user can see that the node has really been
	added.

** Oct 22, 2008 **
	More progresses in the datasets displaying:
	- the workspace and the tree of databases are synchronized now: if a leaf
		with a view is selected in the tree then the view becomes active in the
		workspace. And viceversa, if a view is activated in the workspace its leaf
		is automatically selected in the tree
	- when a node with views is overwritten (because a group has been created, a