@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** Dec 02, 2008**
+	Implemented the capability for zooming cell contents.
+
 ** Nov 30, 2008**
 	Fixed a bug in the navigation of huge datasets. Now displayed data is properly
 	updated when a slider drag ends and when the table is wheeled.
